<resources>
    <string name="app_name">WIP</string>
    <string-array name="HORARIO_MAÑANA">
        <item>08:00 A.M.</item>
        <item>09:00 A.M.</item>
        <item>10:00 A.M.</item>
        <item>11:00 A.M.</item>
        <item>12:00 P.M.</item>
        <item>13:00 A.M.</item>
        <item>14:00 A.M.</item>
        <item>15:00 A.M.</item>
        <item>16:00 P.M.</item>
        <item>17:00 A.M.</item>
        <item>18:00 A.M.</item>
        <item>19:00 A.M.</item>
        <item>20:00 P.M.</item>
        <item>21:00 A.M.</item>
        <item>22:00 A.M.</item>
        <item>23:00 A.M.</item>
        <item>00:00 P.M.</item>
    </string-array>
    <string-array name="HORARIO_TARDE">
        <item>08:00 A.M.</item>
        <item>09:00 A.M.</item>
        <item>10:00 A.M.</item>
        <item>11:00 A.M.</item>
        <item>12:00 P.M.</item>
        <item>13:00 A.M.</item>
        <item>14:00 A.M.</item>
        <item>15:00 A.M.</item>
        <item>16:00 P.M.</item>
        <item>17:00 A.M.</item>
        <item>18:00 A.M.</item>
        <item>19:00 A.M.</item>
        <item>20:00 P.M.</item>
        <item>21:00 A.M.</item>
        <item>22:00 A.M.</item>
        <item>23:00 A.M.</item>
        <item>00:00 P.M.</item>
    </string-array>
    <string name="title_activity_maps" translatable="false">Map</string>

    <string name="bienvenidos">Bienvenido</string>

    <string name="estaprecioH">Precio por hora</string>
    <string name="estaprecioF" translatable="false">Precio por fracción</string>
    <string name="estadireccion">Direccion</string>
    <string name="estaregistrar" translatable="false">Registrar</string>
    <string name="perreg" translatable="false">Registro</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>

    <string-array name="Genero">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="regCorreo">Correo</string>
    <string name="regus">Usuario</string>
    <string name="regcon">Contraseña</string>
    <string name="regconf">Confirmar Contraseña</string>
    <string name="regS">Siguiente</string>
    <string name="estanombre">Nombre</string>
    <string name="estadatos">Datos Estacionamiento</string>
    <string name="estarfc">RFC</string>
    <string name="estahorario">Horario</string>
    <string name="estade">De</string>
    <string name="estaa">A</string>
    <string name="estaespacios">Espacios</string>
    <string name="estah">Precio por hora</string>
    <string name="estaf" translatable="false">Precio por hora</string>
    <string name="estafr">Precio por fracción</string>
    <string name="estadire">Dirección</string>
    <string name="estareg" translatable="false">Registrar</string>
    <string name="mainus">Usuario</string>
    <string name="mainc">Contraseña</string>
    <string name="mainis">Iniciar Sesión</string>
    <string name="mainre">Registrarse</string>
    <string name="regcu">Usuario</string>
    <string name="regcp">Contraseña</string>
    <string name="regcc">Confirmar contraseña</string>
    <string name="regcce">Correo electronico</string>
    <string name="regip">Información Personal</string>
    <string name="regnombredueño">Nombre(s)</string>
    <string name="regapellidopaterno">Apellido paterno</string>
    <string name="regapellidomaterno">Apellido materno</string>
    <string name="regfecha" translatable="false">dd/MM/yyyy</string>
    <string name="regtipousuario">Tipo de usuario</string>
    <string name="regcliente">Cliente</string>
    <string name="regdueño">Dueño</string>
    <string name="regisiguiente">Siguiente</string>
    <string name="tab2nombre">Nombre(s)</string>
    <string name="tap2apellidopaterno">ApellidoPaterno</string>
    <string name="tap2apellidomaterno">Apellido Materno</string>
    <string name="tab2cliente">Client</string>
    <string name="tab2dueño">Dueño</string>
    <string name="tab2siguiente">Siguiente</string>
    <string name="tab2tipodeusuario">Tipo de Usuario</string>
    <string name="tab3tipodecuenta">Tipo de Cuenta</string>
    <string name="tab3regular">Regular</string>
    <string name="tab3premium">Premium</string>
    <string name="tab3informaciondelvehiculo">Información del Vehiculo</string>
    <string name="tab3matricula">Matricula</string>
    <string name="tab3registrar">Registrar</string>
    <string name="tab4nombredelestacionamiento">Nombre del estacionamiento</string>
    <string name="tab4rfc">RFC</string>
    <string name="tab4horario">Horario</string>
    <string name="tab4de">De</string>
    <string name="tab4a">A</string>
    <string name="tab4precio">Precio</string>
    <string name="tab4precioporhora">Precio por hora</string>
    <string name="tab4precioporfraccion">Precio por fracción</string>
    <string name="tab4Siguiente">Siguiente</string>
    <string name="tab5calle">Calle</string>
    <string name="tab5direccion">Dirección</string>
    <string name="tab5numeroexterior">Numero Exterior</string>
    <string name="tab5colonia">Colonia</string>
    <string name="tab5cp">Codigo Postal</string>
    <string name="tab5Ciudad">Ciudad</string>
    <string name="tab5estado">Estado</string>
    <string name="tab5registrar">Registrar</string>
    <string name="title_activity_maps2">Map</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ir_al_mapa">Ir al mapa</string>
    <string name="dueño">Owner</string>



</resources>
