<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.prototipo.registro_completo">

    <TabHost
        android:id="@+id/tabRegistro"
        android:layout_width="0dp"
        android:layout_height="551dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:visibility="visible" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/editText4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:drawableLeft="@drawable/ic_person_black_24dp"
                            android:ems="10"
                            android:hint="@string/regcu"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/editText5"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                            android:ems="10"
                            android:hint="@string/regcp"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editText4" />

                        <EditText
                            android:id="@+id/editText6"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                            android:ems="10"
                            android:hint="@string/regcc"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editText5" />

                        <EditText
                            android:id="@+id/editText7"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            android:drawableLeft="@drawable/ic_email_black_24dp"
                            android:ems="10"
                            android:hint="@string/regcce"
                            android:inputType="textEmailAddress"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editText6" />

                        <Button
                            android:id="@+id/btnContinuar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                            android:text="Continuar"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:context="com.example.android.prototipo.InfoPersonal">

                        <TextView
                            android:id="@+id/tvCuenta"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:background="@color/Gris"
                            android:text="@string/regip"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <EditText
                            android:id="@+id/etNombreDueño"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:drawablePadding="8dp"
                            android:hint="@string/regnombredueño"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvCuenta"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />

                        <EditText
                            android:id="@+id/etApPat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:hint="@string/regapellidopaterno"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etNombreDueño"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />

                        <EditText
                            android:id="@+id/etApMat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:hint="@string/regapellidomaterno"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etApPat"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />

                        <EditText
                            android:id="@+id/etFechaN"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:hint="@string/regfecha"
                            android:textAllCaps="true"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/etApMat"
                            tools:layout_constraintLeft_creator="1"
                            tools:layout_constraintRight_creator="1" />

                        <Spinner
                            android:id="@+id/spGenero"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintTop_toBottomOf="@id/etFechaN" />

                        <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:background="@color/Gris2"
        android:id="@+id/btnSigDueño"
        app:layout_constraintTop_toBottomOf="@+id/spGenero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />-->
                        <TextView
                            android:id="@+id/tvTipUs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/regtipousuario"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/spGenero" />

                        <RadioGroup
                            android:id="@+id/rbgUsu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@id/tvTipUs">

                            <RadioButton
                                android:id="@+id/rbCliente"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:checked="true"
                                android:text="@string/regcliente" />

                            <RadioButton
                                android:id="@+id/rbDueño"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/regdueño" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/btnSigRegis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                            android:text="@string/regisiguiente"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/rbgUsu" />

                    </android.support.constraint.ConstraintLayout>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</android.support.constraint.ConstraintLayout>
